# RustyChat

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: main.css
src/: main.rs
